# fh-frankenui

./: .gitignore  01_core.html  01_core.md  CNAME  CONTRIBUTING.md  README.md  apilist.txt  app_cards.py  components.html  components.html.md  core.html  create_themes_notebook.py  foundation.html  foundation.html.md  index.html  index.html.md  llms-ctx-full.txt  llms-ctx.txt  llms.txt  main.py  pyproject.toml  requirements.txt  robots.txt  search.json  settings.ini  sitemap.xml  test_local_storage.py  test_manual.html  test_manual_daisyui_only.html  test_manual_frankenui_only.html  test_themes.py
_proc/: 00_core.ipynb  01_components.ipynb  index.ipynb
apps/: cards.py  our_card_basic.py  our_cards.py
data/: status_list.json  statuses.json
docs/: 99_main.ipynb  API Reference.ipynb  GettingStarted.md  LLM Contexts.md  SpacingGuide.ipynb  Untitled.ipynb  Untitled1.ipynb  Utils.ipynb  auth.py  example_auth.ipynb  example_cards.ipynb  example_dashboard.ipynb  example_forms.ipynb  example_mail.ipynb  example_music.ipynb  example_playground.ipynb  example_tasks.ipynb  main.py  music.py  playground.py  requirements.txt  tasks.py  theme_usage.md  tutorial_spacing.py  utils.py
ex_app/: auth.py  cards.py  dashboard.py  forms.py  mail.py  main.py  music.py  playground.py  tasks.py
ex_nbs/: 01_tasks.ipynb  02_cards.ipynb  03_dashboard.ipynb  04_forms.ipynb  05_music.ipynb  06_auth.ipynb  07_playground.ipynb  08_mail.ipynb  99_main.ipynb  API Reference.ipynb  api_reference.py  auth.py  cards.py  data
example_app/: 01_tasks.ipynb  02_cards.ipynb  03_dashboard.ipynb  forms.py  (+8 more)
(+105 files in other folders)
